[package]
name = "bertalang"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
antlr-rust = "0.3.0-beta"
clap = { version = "4.4.11", features = ["derive"] }

[build-dependencies]
dotenv = "0.15.0"

[package.metadata.build-script]
paths = ["build.rs"]
